[package]
name = "pallet-deceased-ai"
version = "0.1.0"
description = "AI Training Preparation Layer for Deceased Data"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license = "MIT-0"
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate Dependencies
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }

# FRAME Dependencies
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

# Substrate Primitives
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }

# Local Dependencies
pallet-deceased = { path = "../deceased", default-features = false }

[dev-dependencies]
sp-io = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-deceased/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
