[package]
name = "pallet-deceased-media"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }

# 函数级中文注释：pallet-memo-ipfs依赖用于IpfsPinner trait
pallet-memo-ipfs = { path = "../memo-ipfs", default-features = false }

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-core/std",
  "frame-support/std",
  "frame-system/std",
  "log/std",
  "pallet-memo-ipfs/std",
]


