[package]
name = "pallet-deceased"
version = "0.1.0"
license = "Unlicense"
edition = "2021"
publish = false

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"], default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }

# 函数级中文注释：pallet-memo-ipfs依赖用于IpfsPinner trait
pallet-memo-ipfs = { path = "../memo-ipfs", default-features = false }

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-core/std",
  "log/std",
  "pallet-memo-ipfs/std",
]


