[package]
name = "pallet-fee-guard"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
codec = { workspace = true, default-features = false, features = ["derive"], package = "parity-scale-codec" }
frame-benchmarking = { workspace = true, default-features = false, optional = true }

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "frame-benchmarking/std",
]

# 基准特性开关
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]

[dev-dependencies]
pallet-balances = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }


