[package]
name = "pallet-market-maker"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = ""
homepage = ""
description = "Market maker governance + deposit pallet (skeleton)"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "pallet-timestamp/std",
]

[dependencies]
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-std = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }


