[package]
name = "pallet-market-maker"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = ""
homepage = ""
description = "Market maker governance + deposit pallet (skeleton)"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "pallet-timestamp/std",
    "pallet-credit/std",  # 🆕 2025-10-29: 替代 maker-credit
]

[dependencies]
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-std = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
pallet-credit = { path = "../credit", default-features = false }  # 🆕 2025-10-29: 替代 maker-credit

[dev-dependencies]
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }


