[package]
name = "pallet-meditation"
version = "0.1.0"
license = "MIT-0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"], default-features = false }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

pallet-device = { path = "../device", default-features = false }
pallet-authorizer = { path = "../authorizer", default-features = false }
pallet-mining = { path = "../mining", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-runtime/std",
    "pallet-device/std",
    "pallet-authorizer/std",
    "pallet-mining/std",
]


